--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.1",
+    "recoil": "^0.7.7",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
