--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@langchain/community": "^0.3.55",
     "@langchain/core": "^0.3.75",
+    "@langchain/google-genai": "^0.2.17",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
