feat: update CORS configuration, enhance order creation logic, and integrate Pinecone for vector storage

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "@langchain/community": "^0.3.55",
     "@langchain/core": "^0.3.75",
     "@langchain/google-genai": "^0.2.17",
+    "@langchain/pinecone": "^0.2.0",
     "@langchain/weaviate": "^0.2.3",
+    "@pinecone-database/pinecone": "^6.1.2",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
