--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,8 @@
     "@langchain/community": "^0.3.55",
     "@langchain/core": "^0.3.75",
     "@langchain/google-genai": "^0.2.17",
-    "@langchain/pinecone": "^0.2.0",
-    "@langchain/weaviate": "^0.2.3",
-    "@pinecone-database/pinecone": "^6.1.2",
+    "@langchain/pinecone": "^0.1.1",
+    "@pinecone-database/pinecone": "^5.1.2",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
@@ -30,7 +29,6 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
-    "razorpay": "^2.9.6",
-    "weaviate-client": "^3.8.1"
+    "razorpay": "^2.9.6"
   }
 }
